# Brooks-Quant

./: .gitignore  Brooks图表标注说明.md  EMA20_H2_L2顺势策略规格.md  README.md  backtest_result_utils.py  cta_backtester_sync.py  memory.md  mt5_compat.py  pyproject.toml  run_quant_vnpy.py  vnpy_ui_patches.py
backtests/: brooks_backtest_common.py  optimize_brooks_representatives.py  optimize_ema20_h2_l2.py  run_brooks_strategy_matrix.py  run_ema20_h2_l2_backtest.py
brooks_chart_app/: __init__.py  catalog.py  engine.py  logic.py  material_dates.py  setup_engine.py  ui.py
docs/: ES数据接入选型.md  al_brooks_知识点路线清单.md  brooks_strategy_migration_notes.md  brooks_流程架构说明.md  ema20_h2_l2_spec.md  index.rst  vnpy_模块速览.md  已开发知识点检验清单.md  数据验证与知识点经验总结.md  重点品种数据方案.md  项目执行流程表.md  项目路线与操作规范.md
scripts/: check_bar_data_quality.py  import_binance_spot_to_duckdb.py  import_databento_to_duckdb.py  import_dukascopy_to_duckdb.py  import_generic_csv_to_duckdb.py  import_mt5_history_to_duckdb.py  market_data_common.py
strategies/: __init__.py  ema20_h2_l2_trend_strategy.py  h1_l1_first_pullback_strategy.py  mag_20_gap_strategy.py
tests/: test_brooks_catalog.py  test_brooks_chart_logic.py  test_brooks_setup_engine.py  test_market_data_tools.py
vnpy_evo/: __init__.py  event.py
vnpy_evo/trader/: __init__.py  constant.py  database.py  gateway.py  object.py  setting.py  utility.py
